force-app/force-di/main/objects/di_Binding__mdt/di_Binding__mdt.object-meta.xml
<CustomObject>
    <label>Binding</label>
    <pluralLabel>Bindings</pluralLabel>
</CustomObject>