force-app/force-di/main/objects/di_Binding__mdt/fields/BindingObject__c.field-meta.xml
<CustomField>
    <fullName>BindingObject__c</fullName>
    <label>Binding Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Bindings</relationshipLabel>
    <relationshipName>Bindings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>