force-app/force-di/main/objects/di_Binding__mdt/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>