force-app/force-di/main/objects/di_Binding__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
                <default>true</default>
                <label>Apex</label>
            </value>
            <value>
                <fullName>LightningComponent</fullName>
                <label>Lightning Component</label>
            </value>
            <value>
                <fullName>VisualforceComponent</fullName>
                <label>Visualforce Component</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>