force-app/force-di/main/objects/di_Binding__mdt/validationRules/BindObj_Or_BindObjAlt.validationRule-meta.xml
<ValidationRule>
    <fullName>BindObj_Or_BindObjAlt</fullName>
    <active>true</active>
    <description
  >This validation rule ensures that only the &quot;Binding Object&quot; or the &quot;Binding Object Alternate&quot; field is specified and not both.</description>
    <errorConditionFormula>NOT( ISBLANK( BindingObject__c ) ) &amp;&amp; NOT( ISBLANK( BindingObjectAlternate__c ) )</errorConditionFormula>
    <errorMessage>Only specify the &quot;Binding Object&quot; field or the &quot;Binding Object Alternate&quot; field; not both.</errorMessage>
</ValidationRule>